<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_light"
    android:padding="16dp"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <Button
        android:id="@+id/btn_clear"
        style="@style/Button"

        android:backgroundTint="@color/yellow"
        android:text="@string/text_c"
        app:layout_constraintBottom_toTopOf="@+id/btn_seven"
        app:layout_constraintEnd_toStartOf="@+id/btn_sqr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <Button
        android:id="@+id/btn_sqr"
        style="@style/Button"

        android:text="@string/text_sqr"
        app:layout_constraintBottom_toTopOf="@+id/btn_eight"
        app:layout_constraintEnd_toStartOf="@+id/btn_percent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_clear"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <Button
        android:id="@+id/btn_percent"
        style="@style/Button"

        android:text="@string/text_percent"
        app:layout_constraintBottom_toTopOf="@+id/btn_nine"
        app:layout_constraintEnd_toStartOf="@+id/btn_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_sqr"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <Button
        android:id="@+id/btn_divide"
        style="@style/ButtonNoMargin"

        android:text="@string/tetx_divide"

        app:layout_constraintBottom_toTopOf="@+id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_percent"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <Button
        android:id="@+id/btn_multiply"
        style="@style/ButtonNoMargin"

        android:text="@string/text_multiply"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_nine"
        app:layout_constraintTop_toBottomOf="@+id/btn_divide" />

    <Button
        android:id="@+id/btn_seven"
        style="@style/Button"

        android:text="@string/text_seven"
        app:layout_constraintBottom_toTopOf="@+id/btn_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

    <Button
        android:id="@+id/btn_nine"
        style="@style/Button"

        android:text="@string/text_nine"

        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/btn_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_eight"
        app:layout_constraintTop_toBottomOf="@+id/btn_percent" />

    <Button
        android:id="@+id/btn_eight"
        style="@style/Button"


        android:text="@string/text_eight"
        app:layout_constraintBottom_toTopOf="@+id/btn_five"
        app:layout_constraintEnd_toStartOf="@+id/btn_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_seven"
        app:layout_constraintTop_toBottomOf="@+id/btn_sqr" />

    <Button
        android:id="@+id/btn_five"
        style="@style/Button"

        android:text="@string/text_five"
        app:layout_constraintBottom_toTopOf="@+id/btn_two"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_four"
        app:layout_constraintTop_toBottomOf="@+id/btn_eight" />

    <Button
        android:id="@+id/btn_four"
        style="@style/Button"

        android:text="@string/text_four"
        app:layout_constraintBottom_toTopOf="@+id/btn_one"
        app:layout_constraintEnd_toStartOf="@+id/btn_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_seven" />

    <Button
        android:id="@+id/btn_minus"
        style="@style/ButtonNoMargin"

        android:text="@string/text_minus"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiply" />

    <Button
        android:id="@+id/button11"
        style="@style/Button"

        android:text="@string/text_six"
        app:layout_constraintBottom_toTopOf="@+id/btn_three"
        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_five"
        app:layout_constraintTop_toBottomOf="@+id/btn_nine" />

    <Button
        android:id="@+id/btn_two"
        style="@style/Button"

        android:text="@string/text_two"
        app:layout_constraintBottom_toTopOf="@+id/btn_null"
        app:layout_constraintEnd_toStartOf="@+id/btn_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_one"
        app:layout_constraintTop_toBottomOf="@+id/btn_five" />

    <Button
        android:id="@+id/btn_one"
        style="@style/Button"

        android:text="@string/text_one"
        app:layout_constraintBottom_toTopOf="@+id/btn_dot"
        app:layout_constraintEnd_toStartOf="@+id/btn_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_four" />

    <Button
        android:id="@+id/btn_plus"
        style="@style/ButtonNoMargin"

        android:text="@string/text_plus"
        app:layout_constraintBottom_toTopOf="@+id/btn_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_three"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />

    <Button
        android:id="@+id/btn_three"
        style="@style/Button"

        android:text="@string/text_three"
        app:layout_constraintBottom_toTopOf="@+id/btn_equal"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_two"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/btn_dot"
        style="@style/Button"

        android:text="@string/text_dot"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/btn_null"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/ButtonNoMargin"
        android:backgroundTint="@color/yellow"
        android:text="@string/text_equal"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/btn_null"
        app:layout_constraintTop_toBottomOf="@+id/btn_three" />

    <Button
        android:id="@+id/btn_null"
        style="@style/Button"

        android:text="@string/text_null"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/btn_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btn_dot"
        app:layout_constraintTop_toBottomOf="@+id/btn_two" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/txt_operations"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#CC7E5BA8"
        android:gravity="right"
        android:text="@string/text_operations"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>